Fixed issue with nav not showing up when clicking shopping cart

--- a/mission-ceramics/src/styles/Home.scss
+++ b/mission-ceramics/src/styles/Home.scss
@@ -23,7 +23,8 @@
   float: right;
   margin: 0;
   padding-right: 4vw;
-  padding-top: 4vh;
+  // padding-top: 4vh;
+  padding-bottom: 8vh;
   width: 20vw;
 }
 
